am adaugat informatii sectiunea de ABOUT

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Hot Vacation</title>
+    <title>Rent Services</title>
 </head>
 <body>
 
@@ -29,7 +29,25 @@
     </nav>
 
     <main>
-        <h1>About</h1>
+        <link rel="stylesheet" href="about.css">
+        <h1>Bine ați venit la Rent Services!</h1>
+
+        <div class="about_box">
+
+        <p>Suntem o echipă pasionată de elevi. La Rent Services, ne străduim să ușurăm arenda de servicii umane. Cu o experiență vastă și cunoștințe adânci în domeniu, suntem dedicați să oferim arendarea de servicii de cea mai înaltă calitate pentru clienții noștri.
+            </p>
+            <p>
+                 Misiunea noastră este să ușura viața cotidiana. Ne ghidăm activitatea de principii precum integritatea, inovația și satisfacția clienților. Fiecare membru al echipei noastre contribuie la această misiune cu pasiune și dedicare.
+            </p>
+            <p>
+               La Rent Services, ne angajăm să menținem standarde ridicate în tot ceea ce facem. De la procesul de producție până la relația cu clienții noștri, punem accent pe excelență și profesionalism. 
+            </p>
+            <p>
+                Vă mulțumim că ați luat timpul să ne cunoașteți. Nu ezitați să ne contactați pentru orice întrebări sau solicitări. Suntem aici pentru dumneavoastră!
+            </p>
+            <br>
+            <p>Echipa Rent Services</p>
+        </div>
     </main>
 
     
