add something to about

--- a/about.html
+++ b/about.html
@@ -45,8 +45,8 @@
             <p>
                 Vă mulțumim că ați luat timpul să ne cunoașteți. Nu ezitați să ne contactați pentru orice întrebări sau solicitări. Suntem aici pentru dumneavoastră!
             </p>
-            <br>
-            <p>Echipa Rent Services</p>
+            
+            <p class="test1">Echipa Rent Services</p>
         </div>
     </main>
 
