added some changes

--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,23 @@
     </nav>
 
     <main>
+        <link rel="stylesheet" href="blog.css">
         <h1>Blog</h1>
+        <div>
+            <ul class="column-items">
+                <li>
+                    <img class="img-owner" src="img/eu.png" alt="">
+                    <a class="unu">Dorin Gradinaru</a>
+                </li>
+
+                <li class="owner-text">
+                    <a> Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio iste vel officia ipsa distinctio ipsum corrupti culpa omnis quidem, illo tempore magnam architecto repellat perferendis, sint reprehenderit saepe ullam vero sed esse. Rem sapiente excepturi aut corporis, rerum neque quia labore placeat eligendi dolore ratione magnam eveniet quae nisi soluta numquam accusantium earum animi quos. Maiores distinctio sit quae repudiandae. Nulla ad consequatur eaque exercitationem earum adipisci. Animi rerum quis officiis corrupti necessitatibus temporibus molestiae natus, nulla perferendis, dolorum quisquam, laboriosam cum modi enim laudantium voluptatibus nisi quo non atque ea maxime odit cupiditate. Neque tempore doloribus odit quam aspernatur. Quibusdam, ipsa modi? Totam minus saepe consequatur id commodi cumque, numquam similique, adipisci sunt eaque ex! Hic earum quam minus atque magni tempora, iure obcaecati dolor accusamus illum ea labore tempore voluptatibus accusantium dolore sequi doloribus quisquam distinctio asperiores repudiandae magnam. Repudiandae dolore, adipisci necessitatibus facilis harum debitis accusantium placeat?
+                    </a>
+                </li>
+
+            </ul>
+
+        </div>
     </main>
     
 </body>
