create some folders pentru a usura lucrul

--- a/acc2/acc2.html
+++ b/acc2/acc2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="acc2.css">
+    <link rel="stylesheet" href="/acc2/acc2.css">
     <title>Account_2</title>
 </head>
 
@@ -13,16 +13,16 @@
     <nav class="top-bar"> 
         <ul class="top-list">
             <li class="top-item">
-                <a href="index.html">Back</a>
+                <a href="/index.html">Back</a>
             </li>
             <li class="top-item">
-                <a href="">All services</a>
+                <a href="/acc2/acc2.html">All services</a>
             </li>
             <li class="top-item">
-                <a href="">Your services</a>
+                <a href="/acc2/your.S.acc2.html">Your services</a>
             </li>
             <li class="top-item"> 
-                <a href="">Reserved</a>
+                <a href="/acc2/reserved.acc2.html">Reserved</a>
             </li>
         </ul>
     </nav>
@@ -37,31 +37,31 @@
     <ul class="service-list">
     
         <li class="servicii">
-            <img src="img/electric.jpg">
+            <img src="/img/electric.jpg">
             <a class="denumireJob">Electrcian</a>
             <a href="" class="bt-reserv">Reserv</a>
         </li>
 
         <li class="servicii"> 
-            <img src="img/cuApa.jpg">
+            <img src="/img/cuApa.jpg">
             <a class="denumireJob">Santehnic</a>
             <a href="" class="bt-reserv">Reserv</a>
         </li>
 
         <li class="servicii">
-            <img src="img/constructor.jpg">
+            <img src="/img/constructor.jpg">
             <a class="denumireJob">Constructor</a>
             <a href="" class="bt-reserv"> Reserv</a>
         </li>
 
         <li class="servicii">
-            <img src="img/mobila.jpg">
+            <img src="/img/mobila.jpg">
             <a class="denumireJob">Asamblare Mobila</a>
             <a href="" class="bt-reserv"> Reserv</a>
         </li>
 
         <li class="servicii">
-            <img src="img/curatare.jpg">
+            <img src="/img/curatare.jpg">
             <a class="denumireJob">Menajera</a>
             <a href="" class="bt-reserv"> Reserv</a>
         </li>
