--- a/acc2/your.S.acc2.html
+++ b/acc2/your.S.acc2.html
@@ -24,7 +24,19 @@
         </ul>
     </nav>
 
-    <p>aceasta e pagina de your service la acc2</p>
+    <div class="your-service-wrapper">
+
+        <ul class="your-service-list">
+
+            <li class="your-service">
+                <img src="/img/ora_condus.jpg">
+                <a class="denumireJob">Instructor Auto</a>
+                <a href="" class="bt-reserv">Reserv</a>
+            </li>
+
+        </ul>
+
+    </div>
     
 </body>
 </html>
