add content on your service acc1 and some changes in general

--- a/acc1/your.S.acc1.html
+++ b/acc1/your.S.acc1.html
@@ -24,7 +24,20 @@
         </ul>
     </nav>
 
-    <p>aceasta e pagina de your service la acc1</p>
+    
+    <div class="your-service-wrapper">
+
+        <ul class="your-service-list">
+
+            <li class="your-service">
+                <img src="/img/prof_mate.jpg">
+                <a class="denumireJob">Pregatire Matematiă</a>
+                <a href="" class="bt-reserv">Reserv</a>
+            </li>
+
+        </ul>
+
+    </div>
     
 </body>
 </html>
