--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
         <div>
             <ul class="column-items">
                 <li>
-                    <img class="img-owner" src="img/eu.png" alt="">
+                    <img class="img-owner" src="img/owner_eu.jpg" alt="">
                     <a class="unu">Dorin Gradinaru</a>
                 </li>
 
